# ge-trial-ring-buffer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  git-version.yml
cmake/: compiler-options.cmake
inc/RingBuffer/: Factory.h  IRingBuffer.h
src/: Factory.cpp  RingBuffer.c  RingBuffer.cpp  RingBuffer.h  RingBuffer.hpp
test/: CMakeLists.txt
test/cmake/: compiler-settings.cmake
test/src/: FactoryTest.cpp  RingBufferTest.cpp
